# goose64

./: .gitignore  ART.md  AUDIO.md  GNUmakefile  GRAPHICS.md  Makefile  Makefile.dos  Makefile.irix  N64.md  NOTES.md  README.md  animation.c  animation.cpp  animation.h  animationframe.h  blender.sh  book.h  book.mtl  build.sh  build_and_run.sh  build_cached.sh  build_model.sh  build_modern.sh  bush.h  bush.mtl  character.c  character.cpp  character.h  character_anim.h  characteranimtypes.h  characterrig.h  characterstate.c  characterstate.cpp  characterstate.h  collision.c  collision.cpp  collision.h  common.makefile  compat.cpp  compile.bat  (+159 more)
src/: ART.md  AUDIO.md  CMakeLists.txt  Makefile  N64SDK.md  PROFILING.md  TRACING.md  animation.c  animation.h  book.h  book.mtl  build.sh  build_and_run.sh  build_cached.sh  build_modern.sh  bush.h  bush.mtl  character.c  characterrig.h  characterrig.mtl  collision.c  common.makefile  compat.c  compat.h  compile.bat  constants.h  crossover_build.sh  deploy.sh  disassemble.sh  disassemble_modern.sh  ed64io_errors.h  ed64io_everdrive.c  ed64io_everdrive.h  ed64io_os_error.h  ed64io_sys.c  ed64io_sys.h  ed64io_watchdog.c  ed64io_watchdog.h  em.makefile  emglbuild.sh  (+83 more)
src/gl/: debug_gui.cpp  debug_gui.hpp  glgoose.cpp  glgoose.hpp  imgui_glue.hpp  platform_gl.hpp  platform_glew.hpp  texture.cpp  texture.hpp
src/goose64glut/goose64glut.xcodeproj/: project.pbxproj
src/goose64glut/goose64glut.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/goose64glut/goose64glut.xcodeproj/xcshareddata/xcschemes/: goose64glut.xcscheme
src/models/: Flagpole.blend  Person.blend  Planter.blend  UniBldg.blend  UniFloor.blend  gooserig.blend
src/music/: b1n12ft.mid  b1n12ft2.mid  b1n12ft3.mid  b1n12ftcut.mid
src/music/ableton b1n12 Project/: ableton b1n12.als
src/music/ableton b1n12 Project/Ableton Project Info/: Project8_1.cfg
src/music/preludes b1n12/: all piano.mid  all piano2.mid  midg0.aif  pianoc3_01.aif  sampleC2_01.wav.asd  sampleC2_02.aif
src/music/preludes b1n12 genmidi/preludes b1n12 genmidi.logicx/Alternatives/000/: DisplayState.plist  DisplayStateArchive  ProjectData
src/music/preludes b1n12 genmidi/preludes b1n12 genmidi.logicx/Alternatives/000/Project File Backups/00/: MetaData.plist  ProjectData
src/music/preludes b1n12 genmidi/preludes b1n12 genmidi.logicx/Resources/: ProjectInformation.plist
src/music/preludes b1n12/Audio Files/: preludes b1n12_1#01.aif
src/music/preludes b1n12/Bounces/: midg0.aif  midg1.aif  midg1.aif.asd  pianoc3.aif  sampleC2.pkf  stacc3.aif
src/music/preludes b1n12/preludes b1n12.logicx/Alternatives/000/: DisplayState.plist  DisplayStateArchive  MetaData.plist  ProjectData
src/music/preludes b1n12/preludes b1n12.logicx/Resources/: ProjectInformation.plist
src/music/winmusic/: PIANOC2.AIF  b1n12.bak  b1n12.sng  blob.mid
src/nodegraph/: nodegraph.cpp  nodegraph.hpp
src/sounds/: b1n12_2.ptr  b1n12_2.wbk  b1n12_3.bfx  b1n12ft.sbc  b1n12ft.wbk  honk_2.aif  honk_3.aif  honk_5.aif  honk_6.aif  offhonk_1.aif  offhonk_4.aif  offhonk_5.aif  offhonks.wbk  sfx.bfx
src/wavefront64/: wavefront64.lua
src/wavefront64/wavefront64deps/: util.lua
(+54 files in other folders)
